--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@graphql-codegen/cli": "^4.0.1",
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.15.2",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
@@ -34,6 +36,7 @@
     "@graphql-tools/load": "^8.0.0",
     "@graphql-tools/schema": "^10.0.0",
     "@prisma/client": "4.15.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -42,6 +45,8 @@
     "graphql-type-json": "^0.3.2",
     "graphql-ws": "^5.14.0",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.2",
     "ws": "^8.13.0"
   },
   "engines": {
