- adopt mongoose db general usage (deprecated mongoose collection) - support pagination - optimize npm package - remove websocket - supporting latest bereach, wellclean usage

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 MONGO_DB=mongodb+srv://cheahyikfong:Che%40h981005@organicoat.lfauhzv.mongodb.net
 MONGO_DB_NAME=local-mongoose
+MONGO_DB_LOGGING_NAME=bereach-log-staging
+JWT_SECRET=12345678901234567890
+SERVER_PORT=8101
