--- a/codegen.yml
+++ b/codegen.yml
@@ -1,8 +1,8 @@
 overwrite: true
-schema: [ src/schema/*.graphql]
+schema: [graphql/*.graphql, graphql/types/*.graphql]
 documents: null
 generates:
-  src/types/types.d.ts:
+  src/schema/index.ts:
     plugins:
       - "typescript"
       - "typescript-resolvers"
