--- a/package.json
+++ b/package.json
@@ -5,30 +5,15 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "graphql-codegen && nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts",
-    "eslint:fix": "eslint --fix",
-    "db:shadow": "docker run -d --rm -e MYSQL_ROOT_PASSWORD=secret -e MYSQL_DATABASE=task-shadow --name task-shadow-db -p 3309:3306 mysql:8.0.23",
-    "db:shadow:stop": "docker kill task-shadow-db && docker container prune -f",
-    "create-task": "yarn ts-node ./src/create-task.ts"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "^4.0.1",
-    "@graphql-codegen/typescript": "^4.0.1",
-    "@graphql-codegen/typescript-resolvers": "^4.0.1",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.13",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^18.15.2",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "nodemon": "^2.0.21",
-    "prettier": "^2.8.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "start": "set NODE_ENV=development & nodemon src/index.ts  --exec ts-node",
+    "codegen": "graphql-codegen",
+    "serve": "node dist/index.js",
+    "lint": "eslint -c .eslintrc src",
+    "clean": "rimraf dist/*",
+    "build": " npm run clean && tsc",
+    "buildOld": "npm run clean && babel src -d dist",
+    "buildPro": "rm -rf dist && webpack --mode development",
+    "build:digitalocean": "npm run build && npm run serve "
   },
   "dependencies": {
     "@apollo/server": "^4.7.5",
@@ -36,20 +21,30 @@
     "@graphql-tools/load": "^8.0.0",
     "@graphql-tools/schema": "^10.0.0",
     "@prisma/client": "4.15.0",
+    "apollo-server-express": "^3.12.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.12",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
-    "graphql-type-decimal": "^1.0.0",
-    "graphql-type-json": "^0.3.2",
-    "graphql-ws": "^5.14.0",
-    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
     "mongoose": "^7.3.2",
-    "ws": "^8.13.0"
+    "mongoose-aggregate-paginate-v2": "^1.1.2",
+    "mongoose-paginate-v2": "^1.8.3"
   },
-  "engines": {
-    "node": "16.x"
+  "devDependencies": {
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^18.15.2",
+    "nodemon": "^2.0.21",
+    "typescript": "^4.9.5"
   }
 }
