--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
-    "mongoose": "^7.3.2",
-    "mongoose-aggregate-paginate-v2": "^1.1.2",
-    "mongoose-paginate-v2": "^1.8.3"
+    "mongoose": "^7.3.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^4.0.1",
